# ofdata-reader

./: .dockerignore  Dockerfile  benchmark.md  docker-compose.yml  logging.yml  main.py  pyproject.toml  readme.md
configs/: logging.yml
src/project/: main.py
src/project/adapters/: db.py  ofdata.py  zipfile.py
src/project/application/: services.py
src/project/common/: argparser.py  logging.py
src/project/domain/: models.py
