[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "rostelekom_task"
version = "1.0"
authors = [
    { name = "Alex", email = "lyoffa412@gmail.com" },
]
description = "Test task for rostelekom"
requires-python = ">=3.10"
dependencies = [
    "httpx==0.24.1",
    "pyyaml==6.0.1",
    "orjson==3.9.5",
    "colorlog==6.7.0",
    "tqdm==4.66.1",
    "tenacity==8.2.3",
]
[project.optional-dependencies]
test = [
    "pytest",
]


[project.urls]
"Homepage" = "https://github.com/Alkalit/ofdata-reader"
"Bug Tracker" = "https://github.com/Alkalit/ofdata-reader/issues"